<package>
  <name>kuka_kr1000_titan_support</name>
  <version>0.0.0</version>
  <description>
    <p>
      Support package for the KUKA KR1000_TITAN (and variants), based on ROS-Industrial support packages.
    </p>
    <p>
      This package contains configuration data, 3D models and launch files
      for KUKA KR1000_TITAN manipulators. This currently includes the base model.
    </p>
    <p>
      Joint limits and max joint velocities are based on the information in
      the KUKA data sheets.  All URDFs / XACROs are based on the
      default motion <!--and joint velocity limits-->, unless noted otherwise (ie:
      no support for high speed joints, extended / limited motion ranges or
      other options).
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
  </description>
  <author email="luiz.ferreira@ccm-ita.org.br">Luiz Fernando Lapetina Rocha Ferreira</author>
  <maintainer email="luiz.ferreira@ccm-ita.org.br">Luiz Fernando Lapetina Rocha Ferreira</maintainer>
  <license>BSD</license>

<!--  <url type="website">http://ros.org/wiki/kuka_kr1000_titan_support</url>-->
<!--  <url type="bugtracker">https://github.com/ros-industrial/kuka/issues</url>-->
<!--  <url type="repository">https://github.com/ros-industrial/kuka</url>-->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

<!--  <run_depend>kuka_driver</run_depend>-->
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
</package>
